[package]
name = "cloudbbq"
version = "0.2.0"
authors = ["Rüdiger Sonderfeld <ruediger@c-plusplus.net>", "Andrew Walbran <qwandor@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruediger/cloudbbq"
readme = "README.md"
edition = "2018"
description = "A library for talking to CloudBBQ-style Bluetooth BBQ thermometers."
keywords = ["bbq", "ble", "bluetooth", "temperature", "thermometer"]
categories = ["hardware-support"]

[dependencies]
bluez-async = "0.3.0"
futures = "0.3.13"
log = "0.4.11"
thiserror = "1.0.23"
uuid = "0.8.1"

[dev-dependencies]
eyre = "0.6.5"
pretty_env_logger = "0.4.0"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
