[package]
name = "cloudbbq"
version = "0.3.0"
authors = ["Rüdiger Sonderfeld <ruediger@c-plusplus.net>", "Andrew Walbran <qwandor@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruediger/cloudbbq"
readme = "README.md"
edition = "2018"
description = "A library for talking to CloudBBQ-style Bluetooth BBQ thermometers."
keywords = ["bbq", "ble", "bluetooth", "temperature", "thermometer"]
categories = ["hardware-support"]

[dependencies]
bluez-async = "0.7.0"
futures = "0.3.25"
log = "0.4.22"
thiserror = "2.0.7"
uuid = "1.11.0"

[dev-dependencies]
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.18.4", features = ["macros", "rt", "rt-multi-thread"] }
