[package]
name = "cloudbbq"
version = "0.4.0"
authors = ["Rüdiger Sonderfeld <ruediger@c-plusplus.net>", "Andrew Walbran <qwandor@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruediger/cloudbbq"
readme = "README.md"
edition = "2018"
description = "A library for talking to CloudBBQ-style Bluetooth BBQ thermometers."
keywords = ["bbq", "ble", "bluetooth", "temperature", "thermometer"]
categories = ["hardware-support"]

[dependencies]
bluez-async = "0.8.0"
futures = "0.3.25"
log = "0.4.25"
thiserror = "2.0.11"
uuid = "1.12.1"

[dev-dependencies]
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
